Changes to be committed: 	modified:   FSopenAPI.conf 	deleted:    FSopenAPI_getToken.sh 	new file:   FSopenAPI_stationRealKPI.sh

--- a/FSopenAPI.conf
+++ b/FSopenAPI.conf
@@ -22,18 +22,8 @@
 # if it fails, run
 # apt install curl, jq
 
-# userName and systemCode has to be requested through an Email
-# to eu_inverter_support@huawei.com including the following
-# information (all can be found in the configuration in
-# FusionSolar-Dashboard. Maybe you have to contact your 
-# Installer for specific information):
-# - Company Code (System > Company Management > Company Info
-# - Company Administrator
-# - Plant Name
-# - Serial Number of the installed Inverter
-# - Date of Installation
-# - possibly phone number
-
+# userName and systemCode has to be requested through FusionSolar
+# Create Northbound-API-Account according to Huawei-Documentation
 
 ### FusionSolar-URL
 # adjust the URL in case you do not login through the
@@ -42,19 +32,10 @@
 # usually there's no need to change the Sub-Directories
 # (like URLlogin, URLStation etc.)
 
-# URL="https://eu5.fusionsolar.huawei.com/thirdData"
-# URLlogin="/login"
-# URLStation="/getStationList"
-# URLrealtime="/getStationRealKpi"
-# URLhourly="/getKpiStationHour"
-# URLdaily="/getKpiStationDay"
-# URLmonthly="/getKpiStationMonth"
-# URLyealry="/getKpiStationYear"
-
-
 URL="https://eu5.fusionsolar.huawei.com/thirdData"
 URLlogin="/login"
-URLStation="/getStationList"
+URLlogout="/logout"
+URLStation="/stations"
 URLrealtime="/getStationRealKpi"
 URLhourly="/getKpiStationHour"
 URLdaily="/getKpiStationDay"
@@ -64,16 +45,8 @@ URLyealry="/getKpiStationYear"
 
 ### Login credentials
 # account creation through Huawei Service see above in the comments
-# userName="Eugen_API"
-# systemCode="Huawei@2024"
+# userName="<your_northbound_api_username>"
+# systemCode="<your_northbound_api_password"
 
-userName="Eugen_API"
-systemCode="Huawei@2019"
-
-### Token
-# the Token has to be determined through FSopenAPI_getToken.sh
-# run the script once and add the result here
-# xsrf-token="eyhWIkNSHlOWHAMWOjmhasjPaE"
-
-xsrf-token="entertokenhere"
-
+userName="api_mgr"
+systemCode="SLV7WU3zaZbLMBZ"
