Changes to be committed: 	modified:   FSopenAPI.conf 	new file:   FSopenAPI_deviceRealKPI_wip.sh

--- a/FSopenAPI.conf
+++ b/FSopenAPI.conf
@@ -36,7 +36,9 @@ URL="https://eu5.fusionsolar.huawei.com/thirdData"
 URLlogin="/login"
 URLlogout="/logout"
 URLStation="/stations"
+URLdevlist="/getDevList"
 URLrealtime="/getStationRealKpi"
+URLdevrealkpi="/getDevRealKpi"
 URLhourly="/getKpiStationHour"
 URLdaily="/getKpiStationDay"
 URLmonthly="/getKpiStationMonth"
