--- a/FSopenAPI.conf
+++ b/FSopenAPI.conf
@@ -19,8 +19,9 @@
 # the scripts need the following packages:
 # curl
 # jq
-# if it fails, run
-# apt install curl, jq
+# mysql-client
+# if it fails, run: 
+# apt install curl, jq, mysql-client
 
 # userName and systemCode has to be requested through FusionSolar
 # Create Northbound-API-Account according to Huawei-Documentation
@@ -45,10 +46,19 @@ URLmonthly="/getKpiStationMonth"
 URLyealry="/getKpiStationYear"
 
 
-### Login credentials
+### Login credentials FusionSolar northbound API
 # account creation through Huawei Service see above in the comments
 # userName="<your_northbound_api_username>"
 # systemCode="<your_northbound_api_password"
 
 userName="api_mgr"
 systemCode="SLV7WU3zaZbLMBZ"
+
+### MySQL connection details
+# add MySQL connection details if you want to store historical data directly in MySQL
+
+mysql_host="dbstation"
+mysql_user="mysql"
+mysql_password="ubuntu@My5QL"
+mysql_database="oh3_db"
+mysql_table_prefix="FSopenAPI_"
