Changes to be committed: 	modified:   FSopenAPI.conf

--- a/FSopenAPI.conf
+++ b/FSopenAPI.conf
@@ -26,6 +26,28 @@
 # userName and systemCode has to be requested through FusionSolar
 # Create Northbound-API-Account according to Huawei-Documentation
 
+### Login credentials FusionSolar northbound API
+# account creation through Huawei Service see above in the comments
+# userName="<your_northbound_api_username>"
+# systemCode="<your_northbound_api_password"
+
+userName="<your_northbound_api_username>"
+systemCode="<your_northbound_api_password"
+
+### MySQL connection details
+# add MySQL connection details if you want to store historical data directly in MySQL
+#mysql_host="<mysql_host>"
+#mysql_user="<mysql_user>"
+#mysql_password="<mysql_password>"
+#mysql_database="<´mysql_database>"
+#mysql_table_prefix="<mysql_table_prefix>"
+
+mysql_host="<mysql_host>"
+mysql_user="<mysql_user>"
+mysql_password="<mysql_password>"
+mysql_database="<´mysql_database>"
+mysql_table_prefix="FSopenAPI_"
+
 ### FusionSolar-URL
 # adjust the URL in case you do not login through the
 # European Server but e.g. Middle East & Africa, then it might
@@ -45,20 +67,3 @@ URLdaily="/getKpiStationDay"
 URLmonthly="/getKpiStationMonth"
 URLyealry="/getKpiStationYear"
 
-
-### Login credentials FusionSolar northbound API
-# account creation through Huawei Service see above in the comments
-# userName="<your_northbound_api_username>"
-# systemCode="<your_northbound_api_password"
-
-userName="api_mgr"
-systemCode="SLV7WU3zaZbLMBZ"
-
-### MySQL connection details
-# add MySQL connection details if you want to store historical data directly in MySQL
-
-mysql_host="dbstation"
-mysql_user="mysql"
-mysql_password="ubuntu@My5QL"
-mysql_database="oh3_db"
-mysql_table_prefix="FSopenAPI_"
