--- a/FSopenAPI.conf
+++ b/FSopenAPI.conf
@@ -15,55 +15,64 @@
 # contacting, it might vary in your case.                      #
 # This pre-definied version uses the Europe-URL.               #
 ################################################################
-
+#
 # the scripts need the following packages:
 # curl
 # jq
 # mysql-client
 # if it fails, run: 
 # apt install curl, jq, mysql-client
-
+#
 # userName and systemCode has to be requested through FusionSolar
 # Create Northbound-API-Account according to Huawei-Documentation
-
-### Login credentials FusionSolar northbound API
+# Further documentation to be found here: https://github.com/kyle-mge/FSopenAPI
+#
+#
+#
+### [ Login credentials FusionSolar northbound API ]
 # account creation through Huawei Service see above in the comments
 # userName="<your_northbound_api_username>"
 # systemCode="<your_northbound_api_password"
-
+#
 userName="<your_northbound_api_username>"
 systemCode="<your_northbound_api_password"
-
-### MySQL connection details
+#
+### [ MySQL connection details ]
 # add MySQL connection details if you want to store historical data directly in MySQL
+#
 #mysql_host="<mysql_host>"
 #mysql_user="<mysql_user>"
 #mysql_password="<mysql_password>"
 #mysql_database="<´mysql_database>"
 #mysql_table_prefix="<mysql_table_prefix>"
-
+#
 mysql_host="<mysql_host>"
 mysql_user="<mysql_user>"
 mysql_password="<mysql_password>"
 mysql_database="<´mysql_database>"
-mysql_table_prefix="FSopenAPI_"
-
-### FusionSolar-URL
+mysql_table_prefix="<mysql_table_prefix>"
+#
+#
+### [ FusionSolar-URL ]
 # adjust the URL in case you do not login through the
 # European Server but e.g. Middle East & Africa, then it might
 # be https://sg5.fusionsolar.huawei.com/thirdData
 # usually there's no need to change the Sub-Directories
 # (like URLlogin, URLStation etc.)
-
+#
 URL="https://eu5.fusionsolar.huawei.com/thirdData"
-URLlogin="/login"
-URLlogout="/logout"
-URLStation="/stations"
-URLdevlist="/getDevList"
-URLrealtime="/getStationRealKpi"
-URLdevrealkpi="/getDevRealKpi"
-URLhourly="/getKpiStationHour"
-URLdaily="/getKpiStationDay"
-URLmonthly="/getKpiStationMonth"
-URLyealry="/getKpiStationYear"
-
+#
+#
+#
+# DO NOT CHANGE THE ENTRIES BELOW OR THE SCRIPT WILL CRASH
+#
+loginURL="${URL}/login"
+logoutURL="${URL}/logout"
+stationURL="${URL}/stations"
+devlistURL="${URL}/getDevList"
+devrealkpiURL="${URL}/getDevRealKpi"
+realtimeURL="${URL}/getStationRealKpi"
+hourlyURL="${URL}/getKpiStationHour"
+dailyURL="${URL}/getKpiStationDay"
+monthlyURL="${URL}/getKpiStationMonth"
+yearlyURL="${URL}/getKpiStationYear"
